# Brainfuck

./: .gitignore  .gitmodules  CMakeLists.txt  Readme.md  main.c  program.bf
inc/: brainfuck.h
src/: brainfuck.c
tests/: CMakeLists.txt  tests.c
